# wcs.keycloak

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Makefile  README.md  constraints.txt  instance.yaml  pyproject.toml  setup.cfg  setup.py  sources.ini
.circleci/: config.yml
docker/: Dockerfile  build.sh
news/: +restapi-sync.feature  1.feature
src/wcs/keycloak/: __init__.py  client.py  configure.zcml  group_sync.py  interfaces.py  plugin.py  sync.py  sync_mixins.py  user_sync.py
src/wcs/keycloak/browser/: __init__.py  base.py  configure.zcml  sync_keycloak.py  sync_keycloak_groups.py  sync_keycloak_users.py  user_management.py
src/wcs/keycloak/browser/templates/: usergroups_groupsoverview.pt  usergroups_usersoverview.pt
src/wcs/keycloak/profiles/default/: browserlayer.xml  registry.xml
src/wcs/keycloak/restapi/: base.py  configure.zcml  sync_keycloak.py  sync_keycloak_groups.py  sync_keycloak_users.py
src/wcs/keycloak/templates/: add_keycloak_plugin.zpt
src/wcs/keycloak/testing/: __init__.py  docker.py  keycloak_layer.py  mixins.py
src/wcs/keycloak/tests/: __init__.py  test_client.py  test_enumeration.py  test_plugin_basic.py  test_properties.py  test_restapi_sync.py  test_user_adder.py  test_user_management.py  test_user_sync.py
wcs/keycloak/: __init__.py  client.py  configure.zcml  plugin.py  testing.py  utils.py
wcs/keycloak/templates/: add_plugin.zpt  config.zpt
wcs/keycloak/tests/: __init__.py  test_connection.py  test_layer.py
wcs/keycloak/tests/assets/: test-realm.json
