[metadata]
name = wcs.keycloak
version = 1.0.0a1
description = Keycloak integration for Plone 6
long_description = file: README.md
long_description_content_type = text/markdown
author = webcloud7
author_email = info@webcloud7.ch
license = GPL-2.0
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Plone :: 6.0
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.11
install_requires =
    plone.api
    plone.protect
    requests
    Products.PluggableAuthService
    BTrees

[options.packages.find]
where = src

[options.extras_require]
test =
    beautifulsoup4
    plone.app.testing
    plone.testing
    requests

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone
